# byte-track-api

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-on-macos.yaml
include/: BYTETracker.h  STrack.h  api.h  kalmanFilter.h
src/: BYTETracker.cpp  STrack.cpp  api.cpp  kalmanFilter.cpp  utils.cpp
